# Weekly-DS-Notebooks

./: README.md
Week 1 - Homicide Data/: Homicide_Data.ipynb  pyproject.toml
Week 2 - News Data Embeddings/: New_Data_Embeddings.ipynb  pyproject.toml
Week 3 - Gun Detection with YOLO/: pyproject.toml
Week 4 - Who Wrote It? Tolstoy vs. Dostoevsky in Text Detection/: pyproject.toml  week-4-text-classification-on-authors.ipynb
