[tool.poetry]
name = "week 1 - homicide data"
version = "0.1.0"
description = ""
authors = ["MattStHilaire"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
statsmodels = "^0.14.0"
optuna = "^3.3.0"
plotly-express = "^0.4.1"
plotly = "^5.17.0"
scikit-learn = "^1.3.1"
catboost = "^1.2.2"
numpy = "^1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
