[tool.poetry]
name = "week 2 - news data embeddings"
version = "0.1.0"
description = ""
authors = ["MattStHilaire"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
transformers = "^4.34.1"
pandas = "^2.1.1"
seaborn = "^0.13.0"
numpy = "^1.26.1"
matplotlib = "^3.8.0"
plotly = "^5.17.0"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
